# nba-roty-predictor

./: pyproject.toml
webscraping/: bref_scraper.py  data_collection.py  data_preprocessing.ipynb  data_preprocessing.py  nba_roy_prediction.ipynb
webscraping/notebooks/: bref_scraper.ipynb
